# oxxo-link

./: README.md  pyproject.toml
src/: consumir.py
src/api/: routers.py
src/api/health/: endpoints.py
src/api/v1/post/: endpoints.py  proxies.py  schemas.py  services.py
src/api/v1/users/: endpoints.py  schemas.py  services.py
src/core/settings/: base.py  database.py
src/core/utils/: repository_base.py  responses.py
src/models/: post.py
